hphp/test/zend/bad/ext-standard-file/bug45303.php
<?php
$fd = fopen("php://stdout","a");
var_dump($fd);
var_dump(fseek($fd, 1024*1024, SEEK_SET));
?>